...
//
//		[self openExample];
//	}
}

-(void)openExample{
	NSURL *fileURL = [[self applicationDocumentsDirectory] URLByAppendingPathComponent:@"Finger Painting.txt"];
	[self presentDocumentAtURL:fileURL];
}
-(void)openExampleTwo{
	[KHSettingsController sharedInstance].fontSize = 12;
	[KHSettingsController sharedInstance].showWordCount = YES;
	
	NSURL *fileURL = [[self applicationDocumentsDirectory] URLByAppendingPathComponent:@"Quotes.txt"];
	[self presentDocumentAtURL:fileURL];
}

- (NSURL*)applicationDocumentsDirectory {
     return [[[NSFileManager defaultManager] URLsForDirectory:NSDocumentDirectory inDomains:NSUserDomainMask] lastObject];
}
...
