...
// iPad design first (copy mac apps), then make work on iPhone

-(void)viewDidLoad{
	[super viewDidLoad];
	
	_closeBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"xmark"] style:UIBarButtonItemStyleDone target:self action:@selector(donePressed:)];
	_settingsBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"ellipsis"] style:UIBarButtonItemStylePlain target:self action:@selector(showSettings)];
	
	_saveBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Save" style:UIBarButtonItemStyleDone target:self action:@selector(savePressed)];
	_shareBarButtonItem = [[UIBarButtonItem alloc] initWithBarButtonSystemItem:UIBarButtonSystemItemAction target:self action:@selector(sharePressed:)];
	
	self.navigationItem.leftBarButtonItems = @[
		_closeBarButtonItem,
...
#pragma mark - Keyboard Shortcuts

- (NSArray<UIKeyCommand *>*)keyCommands {
    return @[
		[UIKeyCommand commandWithTitle:@"Open Settings" image:nil action:@selector(showSettings) input:@"," modifierFlags:UIKeyModifierCommand propertyList:nil],
		[UIKeyCommand commandWithTitle:@"Save" image:nil action:@selector(showSettings) input:@"s" modifierFlags:UIKeyModifierCommand propertyList:nil],
		[UIKeyCommand commandWithTitle:@"Close" image:nil action:@selector(donePressed) input:@"w" modifierFlags:UIKeyModifierCommand propertyList:nil]
    ];
}

-(void)showSettings{
	UINavigationController *navController = [[UINavigationController alloc] init];
	SettingsViewController *settingsVC = [[SettingsViewController alloc] init];
...
