...

@implementation SettingsViewController

-(instancetype)init{
	if (self = [super initWithStyle:UITableViewStyleInsetGrouped])
	{
		self.navigationItem.title = @"About Rewritor";
		self.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"xmark"] style:UIBarButtonItemStyleDone target:self action:@selector(closePressed:)];
		
		sections = @[
//			@[
//				[KHSettingRow rowWithTitle:@"Theme"]
//			],
...
